feat: 新增購物車彈窗, 新增會員地址欄位 style:修改彈窗內容樣式

--- a/src/member_revise.html
+++ b/src/member_revise.html
@@ -34,35 +34,21 @@
             <label for="" class="lbt"><h5>聯絡地址:</h5></label>
             <div class="cts">
                 <select name="" id="city"  class="ads">
-                    <option value="">請選取</option>
+                    <option value="000">---請選取---</option>
                 </select>
 
                 <select name="" id="area" class="ads">
-                <option value="">請選取</option>
+                <option value="000">---請選取---</option>
                 </select>
 
                 <input type="text" id="address" class="mb_input">
-                
             </div>
         </div>
-
-
-            <!-- <div class="m_address " id="twzipcode">
-                
-                <select name="county" id="county">台北市</select>
-                <select name="district" id="district" >大安區</select>
-                <input type="text" name="Street">
-            </div> -->
 
         <div class="mb_tel">
             <label for="" class="lbt" ><h5>電話號碼:</h5></label>
             <input type="text" name="tel"  class="mb_input">
         </div>
-
-
-
-
-
 
         <label for="" class="lbt" ><h5>密碼:</h5></label>
         <a href="#" class="ch_pw"><h5>修改密碼</h5></a>
