--- a/src/activity.html
+++ b/src/activity.html
@@ -28,7 +28,7 @@
             right: 0;
             margin: auto;
             width: 400px;
-            height: 410px;
+            height: 470px;
             background-color: #FECC55;
             border-radius: 10px;
             z-index: 13;
@@ -213,7 +213,7 @@
                 <div class="item_imgcover">
                     <img class="item_img" :src="aaa.image" alt="">
                     <div class="item_r_cover">
-                        <img class="item_img_icon" :src="aaa.icon_img" alt="">
+                        <img @click="open(aaa)" class="item_img_icon" :src="aaa.icon_img" alt="">
                         <button v-if="activeIndex == aaa.name"
                             :id="activeIndex == aaa.name ? 'ep_' + aaa.name  : 'not_ep_' + key + '_' +aaa.title "
                             class="reserve" @click="open(aaa)">{{aaa.reserve}}</button>
@@ -231,9 +231,9 @@
                     <input type="radio" value="periodChoise3" id="periodChoise3" name="period" v-model="period">
                     <label for="periodChoise3">{{aaa.p3}}</label><br><br> -->
 
-                    <template v-for="item2 in aaa.time_period">
+                    <!-- <template v-for="item2 in aaa.time_period">
                         <input type="radio"> {{item2}}<br>
-                    </template>
+                    </template> -->
 
                 </div>
             </div>
@@ -274,7 +274,7 @@
                                         icon_img: './img/activity/sheep1.png',
                                         desc: '想知道服裝織品中常見的羊毛，最開始的原型是什麼樣子嗎？讓我們專業的剃羊毛技師為你們揭開這層面紗，攜手一探究竟吧。',
                                         data: ['3/11', '3/13'],
-                                        time_period: ["0900", "1100"],
+                                        time_period: ["09:00-10:00", "14:00-15:00"],
                                         p1: '9:00-10:00',
                                         p2: '14:00-15:00',
                                         p3: '',
@@ -287,7 +287,7 @@
                                         icon_img: './img/activity/soap_icon.png',
                                         desc: '喜歡洗澡嗎 ? 簡單三步驟就能讓你完成屬於自己的肥皂 ，讓Sìkha肥皂滲透你的肌膚，享受肌膚絲緞般的觸感，自用送禮兩相宜，還不快來體驗！ ',
                                         data: ['3/11', '3/13'],
-                                        time_period: ["0900", "1100", "1200"],
+                                        time_period: ["9:00-10:30", "13:00-14:30", "15:00-16:30"],
                                         p1: '9:00-10:30',
                                         p2: '13:00-14:30',
                                         p3: '15:00-16:30',
@@ -323,6 +323,7 @@
                                         icon_img: './img/activity/alpaca1.png',
                                         desc: '跟著草泥馬在遼闊的草原，與和煦陽光的陪伴下，踏著慵懶的步伐，一同遠離塵囂，享受著屬於你我間的怡然時光吧。',
                                         data: ['3/11', '3/13'],
+                                        time_period: ["9:00-10:00", "11:00-12:00", "14:00-15:00"],
                                         p1: '9:00-10:00',
                                         p2: '11:00-12:00',
                                         p3: '14:00-15:00',
@@ -366,6 +367,7 @@
                                         icon_img: './img/activity/cow1.png',
                                         desc: '和動物近距離的體驗，幫乳牛媽媽擠ㄋㄟㄋㄟ，讓小朋友們知道，原來牛奶是從這裡來的呢！。透過工作人員教學說明後，我們可以親手擠出白色的牛奶，配合乳牛媽媽的生理時間，提供每日３個場次可以體驗喔！',
                                         data: ['3/11', '3/13'],
+                                        time_period: ["9:00-9:30", "10:00-10:30", "11:00-11:30", "14:00-14:30"],
                                         p1: '9:00-9:30',
                                         p2: '10:00-10:30',
                                         p3: '11:00-11:30',
@@ -378,6 +380,7 @@
                                         icon_img: './img/activity/cookie_icon.png',
                                         desc: '奶味香濃的餅乾大人小孩都喜歡！但有親手做過餅乾嗎？Sìkha牧場提供新鮮牛奶讓各位大朋友小朋友來這親手製作出香濃可口的ㄋㄟㄋㄟ餅乾 ! ? 簡單三步驟就能讓你完成屬於自己的肥皂 ，讓Sìkha肥皂滲透你的肌膚，享受肌膚絲緞般的觸感，自用送禮兩相宜，還不快來體驗！ ',
                                         data: ['3/11', '3/13'],
+                                        time_period: ["9:00-10:30", "13:00-14:30", "15:00-16:30"],
                                         p1: '9:00-10:30',
                                         p2: '13:00-14:30',
                                         p3: '15:00-16:30',
@@ -396,6 +399,7 @@
                                         icon_img: './img/activity/pig1.png',
                                         desc: '看穿著號碼衣的小豬們，翹著屁股碰碰跳跳的向前賽跑，觀賽前可以先將自己神聖的一票投給喜歡的小豬，比賽結束後，若您投的小豬是冠軍，就可獲得牧場的驚喜小禮物呦！',
                                         data: ['3/11', '3/13'],
+                                        time_period: ["9:00-9:30", "10:00-10:30", "11:00-11:30"],
                                         p1: '9:00-9:30',
                                         p2: '10:00-10:30',
                                         p3: '11:00-11:30',
@@ -414,6 +418,7 @@
                                         icon_img: './img/activity/horse1.png',
                                         desc: '無論你是大朋友小朋友、初學者，都可以安心做牛仔！* 身高 90 公分以下且與陪同成人體重相加總重不超過 80 公斤的兒童可以與成人一起乘坐。',
                                         data: ['3/11', '3/13'],
+                                        time_period: ["9:00-10:00", "13:00-14:00", "15:00-16:00"],
                                         p1: '9:00-10:00',
                                         p2: '13:00-14:00',
                                         p3: '15:00-16:00',
