--- a/src/back_product_detail.html
+++ b/src/back_product_detail.html
@@ -94,6 +94,7 @@
                         type="button">新增區塊</button><span>※最少2個區塊，最多5個區塊</span>
                     <ul id="introduce_area">
                         <li class="prd_introduce">
+                            <input type="file" name="" class="select_introPic">
                             <div class="select_image">
                                 <img src="./img/porducts/cow_1200.jpg" alt=""><span>更換圖片</span>
                             </div>
@@ -101,11 +102,13 @@
                                 maxlength="30"></textarea>
                         </li>
                         <li class="prd_introduce">
+                            <input type="file" name="" class="select_introPic">
                             <div class="select_image"><span>上傳圖片</span></div>
                             <textarea type="text" class="prd_introduce_input" row="1" cols="2"
                                 maxlength="30"></textarea>
                         </li>
                         <li class="prd_introduce">
+                            <input type="file" name="" class="select_introPic">
                             <div class="select_image"><span>上傳圖片</span></div>
                             <textarea type="text" class="prd_introduce_input" row="1" cols="2"
                                 maxlength="30"></textarea>
