--- a/src/member_revise.html
+++ b/src/member_revise.html
@@ -12,7 +12,7 @@
 
         <!-- 首圖 -->
         <div class="member_top">
-            <img src="./img/activity/member_banner.png" alt="">
+            
             <h2 class="memberTitle">會員中心</h2>
         </div>
 
@@ -37,11 +37,11 @@
                 <label for="" class="lbt"><p>聯絡地址:</p></label>
                 <div class="cts">
                     <select name="" id="city"  class="ads">
-                        <option value="000">---請選取---</option>
+                        <option value="000">---台北市---</option>
                     </select>
 
                     <select name="" id="area" class="ads">
-                    <option value="000">---請選取---</option>
+                    <option value="000">---大安區---</option>
                     </select>
 
                     <input type="text" id="address" class="mb_input">
