style: 前台頁面首圖修改

--- a/src/activity.html
+++ b/src/activity.html
@@ -153,9 +153,13 @@
     <!-- header -->
     @@include('./layout/header.html')
 
+    <!-- 首圖 -->
+    <div class="activityTop container-fluid">
+        <h3 class="pageTitle">牧場節目</h3>
+    </div>
+
 
     <div id="app">
-        <img class="activity_banner" src="./img/activity/activity_banner.png" alt="">
         <!-- 3D slider -->
         <div class="checkList">
             <section id="slider">
