--- a/src/animal.html
+++ b/src/animal.html
@@ -15,8 +15,10 @@
     <div id="wrapper">
 
         <!-- main -->
-
-        <img class=animal_banner src="./img/animal/animal_banner.png" alt="">
+        <div class="animalTop container-fluid">
+            <h3 class="pageTitle">Sìkha 動物</h3>
+        </div>
+        <!-- <img class=animal_banner src="./img/animal/animal_banner.png" alt=""> -->
         <div class="animal-container">
             <!-- map -->
             <div class="icon_map_r ">
