--- a/src/news.html
+++ b/src/news.html
@@ -11,8 +11,8 @@
 <body>
     <!-- header -->
     @@include('./layout/header.html')
-    <div class="mainup">
-        <h2>最新消息</h2>
+    <div class="newsTop container-fluid">
+        <h3 class="pageTitle">最新消息</h3>
     </div>
     <main class="main_out">
         <div class="maintop">
