--- a/src/products.html
+++ b/src/products.html
@@ -11,7 +11,11 @@
     <!-- header -->
     @@include('./layout/header.html')
 
-    <img src="./img/porducts/topbg.png" alt="" class="img_top">
+    <!-- 首圖 -->
+    <div class="productsTop container-fluid">
+        <h3 class="pageTitle">周邊產品</h3>
+    </div>
+
     <main class="main_in">
         <div class="noting_out container-lg">
             <span class="noting"><a href="">首頁</a>|<a href="">周邊產品</a></span>
