--- a/src/member_activity.html
+++ b/src/member_activity.html
@@ -10,9 +10,8 @@
         <!-- header -->
         @@include('./layout/header.html')
         <!-- 首圖 -->
-<div class="member_top">
-    <img src="./img/activity/member_banner.png" alt="">
-    <h2 class="memberTitle">會員中心</h2>
+<div class="memberTop container-fluid">
+    <h3 class="pageTitle">會員中心</h3>
 </div>
 
 
