--- a/src/activity.html
+++ b/src/activity.html
@@ -251,6 +251,9 @@
             </div>
         </section>
     </div>
+
+    <!-- footer -->
+    @@include('./layout/footer.html')
      
     <script>
         new Vue({
