--- a/src/member_activity.html
+++ b/src/member_activity.html
@@ -19,11 +19,13 @@
 
 
            <!-- 切換btn -->
+           <div class="mem_wp">
            <div class="mem_tab">
             <input class="mem_btn "  type="button" value="會員資料" onclick="location.href='./member_revise.html'">
             <input class="mem_btn on " type="button" value="我的活動" onclick="location.href='./member_activity/html'">
             <input class="mem_btn" type="button" value="訂單查詢" onclick="location.href='./member_checklist.html'">
         </div>
+    </div>
 
         <article class="mem_ac_wrp"></article>
 
