fix: RWD推薦商品跑版

--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -27,22 +27,22 @@
                     <div class="splide01">
                         <div class="splide__track">
                             <ul class="splide__list">
-                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/strawberry_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/berry2_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/berry3_1200.jpg" alt=""></li>
                             </ul>
                         </div>
                     </div>
                     <div id="thumbnail-slider1" class="splide">
 
                         <div class="splide__track">
-    
+
                             <ul class="splide__list under">
-                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/porducts/papaya.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/strawberry_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/berry2_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/porducts/berry3_1200.jpg" alt=""></li>
                             </ul>
-    
+
                         </div>
                     </div>
                 </div>
@@ -59,8 +59,9 @@
                         <h5>數量</h5>
 
                         <div id="pd_stockCount">
-                            <button class="pd_stockCount_btn" id="pd_stockCount_minus">－</button><input type="text" id="pd_stockCount_input"
-                                value="1" name="add_prd_count" readonly><button class="pd_stockCount_btn" id="pd_stockCount_plus">＋</button>
+                            <button class="pd_stockCount_btn" id="pd_stockCount_minus">－</button><input type="text"
+                                id="pd_stockCount_input" value="1" name="add_prd_count" readonly><button
+                                class="pd_stockCount_btn" id="pd_stockCount_plus">＋</button>
                         </div>
                         <h5>在庫數量：<span id="pd_inStock">999</span></h5>
                     </div>
@@ -73,7 +74,7 @@
 
         <hr class="pd__hr">
         <!-- 專推 -->
-        <h3 class="pd_intro_h3">商品描述</h3>
+        <h3 class="pd_intro_h3">商品介紹</h3>
         <div class="intro_area">
             <div class="pd_intro">
                 <div class=" pd_intro_pic"><img src="./img/porducts/cow_1200.jpg" alt="">
@@ -82,20 +83,19 @@
             </div>
 
             <div class="pd_intro">
-                <div class="pd_intro_pic "><img src="./img/porducts/cow_1200.jpg" alt=""></div>
-                <p>使用每日現擠的牛乳製成，無人工反式脂肪與人工賀爾蒙</p>
+                <div class="pd_intro_pic "><img src="./img/porducts/berry_1200.jpg" alt=""></div>
+                <p>當季限定！新鮮草莓在裡面！</p>
             </div>
         </div>
         <h3 class="pd_recommend_h3">推薦商品</h3>
         <!-- 推薦商品 -->
-        <div>
-            <div class="pd_recommend " id="splide02">
+        <div class="pd_recommend">
+            <div id="splide02">
                 <div class="splide__track">
                     <ul class="pd_recommend_list splide__list">
-
                         <li class="splide__slide">
                             <a href="#">
-                                <img src="./img/porducts/papaya.jpg" alt="">
+                                <img src="./img/porducts/coffee_1200.jpg" alt="">
                                 <div class="pd_recommend_text">
                                     <p class="pd_recommend_name">咖啡牛奶</p>
                                     <p class="pd_recommend_price">299</p>
@@ -105,9 +105,9 @@
 
                         <li class="splide__slide">
                             <a href="#">
-                                <img src="./img/porducts/papaya.jpg" alt="">
+                                <img src="./img/porducts/apple.jpg" alt="">
                                 <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">咖啡牛奶</p>
+                                    <p class="pd_recommend_name">蘋果牛奶</p>
                                     <p class="pd_recommend_price">299</p>
                                 </div>
                             </a>
@@ -116,7 +116,7 @@
                             <a href="#">
                                 <img src="./img/porducts/papaya.jpg" alt="">
                                 <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">咖啡牛奶</p>
+                                    <p class="pd_recommend_name">木瓜牛奶</p>
                                     <p class="pd_recommend_price">299</p>
                                 </div>
                             </a>
